--- a/front/store-manager/src/css/commons.css
+++ b/front/store-manager/src/css/commons.css
@@ -55,3 +55,15 @@
 .body-container{
   min-height: 100vh;
 }
+
+.contact-circle{
+  background: #0D6EFD;
+  color : white;
+  width: 40px; 
+  height: 40px;
+  border-radius: 50%;
+  display: flex; /* or inline-flex */
+  align-items: center; 
+  justify-content: center;
+  font-size: 0.9rem;
+}
